# my-python-project

./: pyproject.toml  requirements.txt  test_sample.py
.github/workflows/: python-ci.yml
