[project]
name = "my-python-project"
version = "0.1.0"
description = ""
authors = [
    {name = "yuta-iizuka",email = "zunzun2682@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
